<resources>
    <string name="app_name">Little Music Admin</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="email_example">abc@example.com</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="none_display">There are no items to display</string>
    <string name="slider_show">Slider Show</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="all">All</string>
    <string name="users">Users</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="album">Album</string>
    <string name="albums">Albums</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="editors_choice">Editors Choice</string>
    <string name="most_views">Most Views</string>
    <string name="most_loves">Most Loves</string>
    <string name="favorites">Favorites</string>
    <string name="ok">OK</string>
    <string name="choose_song">Choose Song</string>
    <string name="duration">Duration</string>
    <string name="add_new_album">Add New Album</string>
    <string name="add_new_artist">Add New Artist</string>
    <string name="add_new_song">Add New Song</string>
    <string name="songs">Songs</string>
    <string name="add_new_category">Add New Category</string>
    <string name="about_the_artist">About The Artist</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_artist">Edit Artist</string>
    <string name="edit_album">Edit Album</string>
    <string name="edit_song">Edit Song</string>
    <string name="categories">Categories</string>
    //Slider_Show
    <string name="plus_slider">+</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="teen">10</string>
    <string name="eleven">11</string>
    <string name="twelfth">12</string>
    <string name="thirteen">13</string>
    <string name="fourteenth">14</string>
    <string name="fifteenth">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="edit">Edit</string>
    <string name="password_hint">********</string>
    <string name="most_songs">Most Songs</string>
    <string name="most_interested">Most Interested</string>
    <string name="most_albums">Most Albums</string>
    // Accessibility
    <string name="desc_back">Back</string>
    <string name="desc_more">More options</string>
    <string name="desc_edit_image">Edit image</string>
    <string name="desc_love">Love</string>
    <string name="desc_favorite">Favorite</string>
    <string name="desc_download">Download</string>
    <string name="desc_close">Close</string>
    <string name="desc_remove">Remove</string>
    <string name="desc_change">Change</string>
    <string name="desc_add">Add</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="crop_image">Crop Image</string>
    <!-- Navigation Titles -->
    <string name="title_splash">Splash</string>
    <string name="title_login">Login</string>
    <string name="title_main">Main</string>

    <string name="artists_count">Artists count</string>
    <string name="albums_count">Albums count</string>
    <string name="categories_count">Categories count</string>
    <string name="favorites_count">Favorites count</string>
    <string name="back">Back</string>
    <string name="no_internet_connection">No internet connection</string>

    <string name="please_wait">Please wait&#8230;</string>
    <string name="loading">Loading&#8230;</string>
</resources>