<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".Activity.EditorsChoiceAddActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_page_event" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="5sp"
            android:paddingBottom="10sp">

            <HorizontalScrollView
                android:id="@+id/scrollSwitchUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="5sp"
                android:paddingBottom="5sp"
                android:scrollbarSize="0dp"
                android:scrollbarThumbHorizontal="@color/white">

                <LinearLayout
                    android:id="@+id/linearSwitchUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5sp"
                        android:elevation="6sp"
                        app:strokeWidth="0dp"
                        app:cardCornerRadius="10sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?mc_bg">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="20sp"
                                android:paddingVertical="10sp"
                                android:text="@string/all"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5sp"
                        android:elevation="6sp"
                        app:strokeWidth="0dp"
                        app:cardCornerRadius="10sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?mc_bg">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="20sp"
                                android:paddingVertical="10sp"
                                android:text="@string/name"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/mostViews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5sp"
                        android:elevation="6sp"
                        app:strokeWidth="0dp"
                        app:cardCornerRadius="10sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?mc_bg">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="20sp"
                                android:paddingVertical="10sp"
                                android:text="@string/most_views"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/mostLoves"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5sp"
                        android:elevation="6sp"
                        app:strokeWidth="0dp"
                        app:cardCornerRadius="10sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?mc_bg">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="20sp"
                                android:paddingVertical="10sp"
                                android:text="@string/most_loves"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/favorites"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5sp"
                        android:elevation="6sp"
                        app:strokeWidth="0dp"
                        app:cardCornerRadius="10sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?mc_bg">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="20sp"
                                android:paddingVertical="10sp"
                                android:text="@string/favorites"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/emptyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginVertical="100sp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/none_display"
                        android:textColor="?colorError"
                        android:textSize="32sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="50dp"
                        android:indeterminateDrawable="@drawable/progress_bar_2"
                        android:visibility="visible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical"
                        android:visibility="gone"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:reverseLayout="true"
                        app:stackFromEnd="true"
                        tools:listitem="@layout/item_song" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
