<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?background"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_color_event" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10sp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/chooseSong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="50sp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="50sp"
                        android:layout_height="50sp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:elevation="0sp"
                            app:cardCornerRadius="30dp"
                            app:cardElevation="0sp">

                            <ImageView
                                android:id="@+id/book"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/white"
                                android:padding="10sp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_music"
                                app:tint="@color/black" />

                        </androidx.cardview.widget.CardView>

                    </FrameLayout>

                    <TextView
                        android:id="@+id/choose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10sp"
                        android:text="@string/choose_song"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:src="@drawable/ic_music_name"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5sp"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10sp"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/nameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/button4"
                        android:gravity="center"
                        android:inputType="textPersonName|textCapWords"
                        android:padding="15sp"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:src="@drawable/ic_mic"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5sp"
                        android:text="@string/artist"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10sp"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button4"
                    android:drawablePadding="10sp"
                    android:gravity="center_vertical"
                    android:padding="15sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/ic_down_gray"
                    app:drawableTint="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:src="@drawable/ic_album"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5sp"
                        android:text="@string/album"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/album"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10sp"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button4"
                    android:drawablePadding="10sp"
                    android:gravity="center_vertical"
                    android:padding="15sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/ic_down_gray"
                    app:drawableTint="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:src="@drawable/ic_category_gray"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5sp"
                        android:text="@string/category"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10sp"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button4"
                    android:drawablePadding="10sp"
                    android:gravity="center_vertical"
                    android:padding="15sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/ic_down_gray"
                    app:drawableTint="@color/white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:src="@drawable/ic_time"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5sp"
                        android:text="@string/duration"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10sp"
                    android:background="@drawable/button4"
                    android:gravity="center"
                    android:padding="15sp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>